--- a/android/build.gradle
+++ b/android/build.gradle
@@ -44,6 +44,8 @@ android {
 
 dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.google.android.gms:play-services-ads:+'
+    implementation("com.google.android.gms:play-services-ads:15.0.1") {
+        exclude group: 'com.google.android.gms' , module: 'play-services-measurement'
+    }
     implementation 'com.facebook.react:react-native:+'
 }
